# LungCancerDetectionCNN

./: .gitignore  .~lock.DocumentieLicenta.odt#  README.md  gui.py  main.py  model.h5  modelGAN-C.h5  split.py
Python/: gui.py  main.py  main1.py  model.h5  modelCNN.h5
Rust/: Cargo.toml
Rust/src/: main.rs
licenta/: Cargo.toml
licenta/src/: main.rs
